log/build_2025-10-03_16-26-49/darkhorse_perception/stderr.log
  File "/home/ram_charan/DH_ws/install/darkhorse_perception/lib/python3.10/site-packages/darkhorse_perception/vehicle_speed_node.py", line 270
    self.pub_offs  = self.create_publisher(Float32, "/lane_offset", 10)
                 ^
SyntaxError: invalid non-printable character U+00A0

